tests/paczka1/small_fuzzy/42201850.err
Error in line 2: DI4OzcWs S224 55,2
Error in line 6: DI4OzcWs S184 45,5
Error in line 7: DI4OzcWs A328 55,7
